package com.engenharia_software.agenda.DTO;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class TipoDTO {
    private String tipo;
}
