package com.engenharia_software.agenda.Factory;

public enum TipoAgenda {
    LIST, MAP
}
